# music-sae

./: .env.sample  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  justfile  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
conf/ablation/: config.yaml  debug-config.yaml  small-config.yaml
conf/collect/: config-fma.yaml  config-forward-usae.yaml  config-forward.yaml  config-gen.yaml  config-jamendo-anty-reggae.yaml  config-jamendo-classical-guitar.yaml  config-jamendo-fast.yaml  config-jamendo-generic.yaml  config-jamendo-not-classical-guitar.yaml  config-jamendo-reggae.yaml  config-jamendo-usae.yaml  config-jamendo.yaml  (+2 more)
docs/: user_manual.md  wimu2025l.md  wimu2025l_final.md  zzsn2025l.md
musicsae/: nnsight_model.py  usae.py
notebooks/: 00-musicgen-sae-demo.ipynb  01-musicgen-nnsight.ipynb  01-musicgen-sae.ipynb  02-ablation-datasets.ipynb  02-musicgen-hg.ipynb  03-musicgen-ablation-study.ipynb  04-musicgen-dictionary-learning.ipynb  04-yue-nnsight.ipynb  05-musicgen-audio-learning.ipynb  06-qwen-descriptions.ipynb  07-fma-dataset.ipynb  07-musicgen-sae-topk-eval.ipynb  08-jamendo-dataset.ipynb  09-interp-feat.ipynb  10-gemini.ipynb  11-clap-score.ipynb  12-histogram.ipynb  13-unlearn.ipynb  14-intervention.ipynb  utils.py
rave/: activation_patching.py  activation_sensivity.py  activations.py  callbacks.py  dict_learning.sh  dict_params.json  dictionary_learning.py  dictionary_learning_sae.py  pyproject.toml  rave_architecture_check.py  rave_config_load.py  rave_decoder_first_layer_experiment.py  rave_encoder_7_layer_experiment.py  rave_encoder_latent_dim_experiment.py  rave_experiments.py  requirements.txt  sae_params.json  sae_test.py  sae_training.py  separation_score.py  style_transfer.py
rave/diagrams_data/: Sensivity_pitch_steps (one step is equal to semitone): -2_BN.txt  Sensivity_pitch_steps (one step is equal to semitone): -2_Funk.txt  Sensivity_pitch_steps (one step is equal to semitone): -2_Jazz.txt  Sensivity_pitch_steps (one step is equal to semitone): -2_Rock.txt  Sensivity_pitch_steps (one step is equal to semitone): -2_SS.txt  Sensivity_pitch_steps (one step is equal to semitone): -2_darbouka.txt  Sensivity_tempo_tempo modification scale: 0.5_BN.txt  Sensivity_tempo_tempo modification scale: 0.5_Funk.txt  Sensivity_tempo_tempo modification scale: 0.5_Jazz.txt  Sensivity_tempo_tempo modification scale: 0.5_Rock.txt  Sensivity_tempo_tempo modification scale: 0.5_SS.txt  Sensivity_tempo_tempo modification scale: 0.75_BN.txt  Sensivity_tempo_tempo modification scale: 0.75_Funk.txt  Sensivity_tempo_tempo modification scale: 0.75_Jazz.txt  Sensivity_tempo_tempo modification scale: 0.75_Rock.txt  Sensivity_tempo_tempo modification scale: 0.75_SS.txt  Sensivity_tempo_tempo modification scale: 0.75_darbouka.txt  darbouka_decoder_5_BN_batch_losses_params_id_0.json  darbouka_decoder_5_BN_train_losses_params_id_0.json  darbouka_decoder_5_BN_train_losses_params_id_0_sae.json  darbouka_decoder_5_BN_val_losses_params_id_0.json  darbouka_decoder_5_BN_val_losses_params_id_0_sae.json  darbouka_decoder_5_batch_losses_params_id_0.json  darbouka_decoder_5_train_losses_params_id_0.json  darbouka_decoder_5_val_losses_params_id_0.json  darbouka_decoder_BN_7_20_test_train_losses_params_id_3.json  darbouka_decoder_BN_7_20_test_val_losses_params_id_3.json  darbouka_decoder_BN_7_20_train_losses_params_id_3.json  darbouka_decoder_BN_7_20_val_losses_params_id_3.json  darbouka_decoder_BN_7_batch_losses_params_id_0.json  darbouka_decoder_BN_7_batch_losses_params_id_1.json  darbouka_decoder_BN_7_batch_losses_params_id_2.json  darbouka_decoder_BN_7_train_losses_params_id_0.json  darbouka_decoder_BN_7_train_losses_params_id_1.json  darbouka_decoder_BN_7_train_losses_params_id_2.json  darbouka_decoder_BN_7_train_losses_params_id_3.json  darbouka_decoder_BN_7_val_losses_params_id_0.json  darbouka_decoder_BN_7_val_losses_params_id_1.json  darbouka_decoder_BN_7_val_losses_params_id_2.json  darbouka_decoder_BN_7_val_losses_params_id_3.json  (+34 more)
scripts/: ablate_musicgen.py  accelerate_poc.py  collect_activations.py  collect_musicgen_activations.py  collect_yue_activations.py  create_dataset.py  create_dataset_README.md  describe_sae_features.py  ds_fma_tool.py  eval_interventions.py  evaluate_music_features.py  generate_descriptions.py  generate_interventions.py  infer_trace_2.py  organize_audio.py  plot_interventions.py  plot_linear_probing.py  prepare_fma_ds.py  sae_features_examples.py  split_audio.py  train_example.py  train_linear_probing.py  train_musicgen_sae.py  train_musicgen_sae_disk.py  train_musicgen_usae.py  train_sae_disk.py  train_usae.py  train_usae_disk.py
src/: audio.py  dataset_plugins.py  heatmap.py  project_config.py
test/: test_ds_plugins.py  test_fma_plugin.py  test_usae.py
yue/: codecmanipulator.py  common.py  mmtokenizer.py  tags.json  yue.py
(+23 files in other folders)
