[tool.poetry]
name = "musicsae"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.5"
transformers = "^4.50.0"
scipy = "^1.15.2"
nnsight = "^0.4.5"
datasets = "^3.4.1"
soundfile = "^0.13.1"
jupytext = "^1.16.7"
dotenv = "^0.9.9"
torchaudio = "^2.6.0"
simple-parsing = "^0.1.7"
seaborn = "^0.13.2"
toolz = "^1.0.0"
tqdm = "^4.67.1"
jupyter = "^1.1.1"
hydra-core = "^1.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
